# azalia

./: .envrc  .gitignore  .noeldoc  .noeldoc.hcl  Cargo.toml  LICENSE  README.md  clippy.toml  default.nix  deny.toml  flake.nix  renovate.json  rust-toolchain.toml  rustfmt.toml  shell.nix
.github/workflows/: CI.yaml  Release.yaml
crates/azalia/: Cargo.toml  README.md  build.rs
crates/azalia/src/: lib.rs  macros.rs  proc_macro.rs  rust.rs  util.rs
crates/config/: Cargo.toml  README.md  merge_without_derive
crates/config-derive/: Cargo.toml  README.md
crates/config-derive/src/: args.rs  expand.rs  lib.rs
crates/config-derive/src/merge/: args.rs  expand.rs  mod.rs
crates/config-derive/tests/: ui.rs
crates/config-derive/tests/ui/: custom_strategy.rs  enum.rs  enum.stderr  generics.rs  skip_test.rs  strategy_multi.rs  struct.rs  union.rs  union.stderr  unnamed.rs
crates/config-derive/tests/ui/merge/: custom_strategy.rs  enum.rs  enum.stderr  generics.rs  skip_test.rs  strategy_multi.rs  struct.rs  union.rs  union.stderr  unnamed.rs
crates/config-derive/tests/ui/unstable/env_test/: disallow_inputs.rs  disallow_inputs.stderr  should_work.rs
crates/config/macros/: Cargo.toml
crates/config/macros/__broken_tests/: ui.rs
crates/config/macros/__broken_tests/ui/fail/env_test/: abi.rs  abi.stderr
crates/config/macros/__broken_tests/ui/fail/merge/: union.stderr
crates/config/macros/__broken_tests/ui/pass/env_test/: doctest.rs
crates/config/macros/__broken_tests/ui/pass/merge/: generics.rs  structs.rs
crates/config/macros/src/: env_test.rs  lib.rs  merge.rs  tryfromenv.rs
crates/config/macros/tests/: ui.rs
crates/config/macros/tests/ui/fail/env_test/: constness.rs  constness.stderr  other_exprs.rs  other_exprs.stderr
crates/config/macros/tests/ui/fail/merge/: enum.rs  enum.stderr  union.rs
crates/config/macros/tests/ui/pass/env_test/: const.rs  expr_call.rs
crates/config/macros/tests/ui/pass/merge/: custom_strategy.rs  skip.rs  unnamed.rs
crates/config/src/: env.rs  lib.rs  merge.rs
crates/config/src/merge/: mod.rs  strategy.rs
crates/config/tests/: ui.rs
crates/config/tests/ui/merge/: enumeration.rs  enumeration.stderr  invalid_field_attrs.rs  invalid_field_attrs.stderr  literal_str_in_attrs.rs  literal_str_in_attrs.stderr  union.rs  union.stderr
crates/log/: Cargo.toml  README.md
crates/log/src/: lib.rs  writers.rs
crates/log/src/writers/: default.rs  impl.rs  json.rs
crates/log/src/writers/default/: visitor.rs
crates/proc-macros/: Cargo.toml
crates/proc-macros/src/: lib.rs  macros.rs
crates/remi/: Cargo.toml  README.md
crates/remi/src/: lib.rs
crates/serde/: Cargo.toml  README.md
crates/serde/src/: aws.rs  lib.rs  s3.rs  tracing.rs
nix/: devshell.nix
