# 🐻‍❄️🪚 azalia: Noelware's Rust commons library.
# Copyright (c) 2024-2025 Noelware, LLC. <team@noelware.org>
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

[package]
name = "azalia-config"
description = "🐻‍❄️🪚 Defines traits, types, and utilities for dealing with application configuration"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = ["std"]

unstable = ["azalia-config-macros?/unstable"]
tracing = ["dep:tracing"]
macros = ["dep:azalia-config-macros"]
sentry = ["dep:sentry-types"]

alloc = []
std = []

[dependencies]
azalia-config-macros = { version = "=0.1.6", path = "./macros", optional = true }
sentry-types = { version = "0.37.0", optional = true }
tracing = { version = "0.1.41", optional = true }
url = { version = "2.5.4", optional = true }

[dev-dependencies]
trybuild = { version = "1.0.104", features = ["diff"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
