# 🐻‍❄️🪚 core-rs: Collection of Rust crates that are used by and built for Noelware's projects
# Copyright (c) 2024 Noelware, LLC. <team@noelware.org>
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

[package]
name = "noelware-log"
description = "🐻‍❄️🪚 Provides a `tracing_subscriber::Layer` implementation for any `std::io::Write` implementation and writers that are used in Noelware projects"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
writers = ["dep:owo-colors", "dep:chrono"]
default = ["writers"]
log = ["dep:tracing-log"]

[dependencies]
chrono = { version = "0.4.32", optional = true }
owo-colors = { version = "4.0.0", optional = true, features = [
    "supports-colors",
] }
serde_json = "1.0.111"
tracing = "0.1.40"
tracing-log = { version = "0.2.0", optional = true }
tracing-subscriber = "0.3.18"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
