# 🐻‍❄️🪚 core-rs: Collection of Rust crates that are used by and built for Noelware's projects
# Copyright (c) 2024 Noelware, LLC. <team@noelware.org>
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

[package]
name = "noelware-remi"
description = "🐻‍❄️🪚 Provides a union-enum of `remi::StorageConfig` for supported remi-based crates."
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
file-format = ["remi-fs/file-format"]
async-std = ["remi-fs/async-std"]
serde_json = ["remi-fs/serde_json"]
serde_yaml = ["remi-fs/serde_yaml"]
tracing = [
    "remi-fs/tracing",
    "remi-s3/tracing",
    "remi-azure/tracing",
    "remi-gridfs/tracing",
]
gridfs = ["dep:remi-gridfs", "dep:mongodb"]
azure = ["dep:remi-azure", "dep:azure_core"]
serde = [
    "dep:serde",
    "remi-fs/serde",
    "remi-s3/serde",
    "remi-azure/serde",
    "remi-gridfs/serde",
]
log = ["remi-fs/log", "remi-s3/log", "remi-azure/log", "remi-gridfs/log"]
all = ["gridfs", "s3", "fs", "azure"]
s3 = ["dep:remi-s3"]
fs = ["dep:remi-fs"]

[dependencies]
azure_core = { version = "0.19.0", optional = true }
bytes = "1.5.0"
mongodb = { version = "2.8.1", optional = true }
remi = "0.6.1"
remi-azure = { version = "0.6.1", optional = true }
remi-fs = { version = "0.6.0", optional = true }
remi-gridfs = { version = "0.6.0", optional = true }
remi-s3 = { version = "0.6.0", optional = true }
serde = { version = "1.0.196", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
